fix: Address critical security vulnerabilities and bugs identified by Greptile
Security Fixes:
- Fix command injection vulnerability: Use shlex.split() with shell=False instead of shell=True
- Add shell metacharacter validation to prevent command injection
- Improve dangerous command filtering with regex patterns instead of simple string matching
- Block additional dangerous patterns (rm -rf /*, wget|sh, curl|sh, etc.)

Bug Fixes:
- Fix file write action detection: Check if file exists BEFORE writing
- Fix JSON parsing: Handle braces inside string literals properly using state machine
- Fix Docker networking: Document host networking usage and frontend connection
- Fix config mismatch: Update environment.example to match localhost default
- Remove hardcoded user path: Use /tmp/prometheus_workspace as default

Code Quality:
- Clean up .gitignore: Remove duplicates and invalid Python extensions
- Add proper imports (re, shlex) for security features

All critical issues from Greptile review addressed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
+    # Note: Using host networking on Linux for Ollama access
+    # This means backend is accessible at localhost:8000
+    # Port mapping is ignored in host mode
+    network_mode: "host"
     env_file:
       - .env
-    network_mode: "host"
     volumes:
       - ./backend/prometheus:/app/prometheus
 
@@ -19,11 +20,7 @@ services:
       - "3001:3000"
     environment:
       - NODE_ENV=development
+      # Frontend connects to backend via localhost (backend uses host network)
+      - VITE_API_URL=http://localhost:8000
     depends_on:
       - backend
-    networks:
-      - prometheus-network
-
-networks:
-  prometheus-network:
-    driver: bridge
